--- a/Rcp.html
+++ b/Rcp.html
@@ -94,7 +94,7 @@
         <a class="text-sm md:text-base font-medium leading-normal text-[#f38124] border-b-2 border-[#f38124]" href="#">Recipes</a>
         <a class="text-sm md:text-base font-medium leading-normal hover:text-[#f38124] transition-colors" href="#">Learn/How-to</a>
         <a class="text-sm md:text-base font-medium leading-normal hover:text-[#f38124] transition-colors" href="#">Seasonal Sensations</a>
-        <a class="text-sm md:text-base font-medium leading-normal hover:text-[#f38124] transition-colors" href="#">Shop</a>
+        <a class="text-sm md:text-base font-medium leading-normal hover:text-[#f38124] transition-colors" href="Blog.html">Blog</a>
       </div>
       <div class="flex items-center gap-2 md:gap-4">
        <a href="login.html" class="flex items-center justify-center h-10 px-4 bg-[#f38124] text-[#1c140d] text-sm font-bold rounded-xl whitespace-nowrap min-w-[84px] hover:bg-[#e07015] transition-colors">
