--- a/Sample.html
+++ b/Sample.html
@@ -130,7 +130,7 @@
                 <p class="text-base font-medium leading-normal">Breakfast</p>
               </div>
               <div class="flex flex-col gap-3 text-center min-w-[100px] sm:min-w-[120px]">
-                <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full w-full" style='background-image: url("https://images.unsplash.com/photo-1551024601-bec78c9445f9?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");'></div>
+                <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full w-full" style='background-image: url("https://media.istockphoto.com/id/497959594/photo/fresh-cakes.jpg?s=612x612&w=0&k=20&c=T1vp7QPbg6BY3GE-qwg-i_SqVpstyHBMIwnGakdTTek=");'></div>
                 <p class="text-base font-medium leading-normal">Desserts</p>
               </div>
             </div>
@@ -142,7 +142,7 @@
                   <div class="flex animate-slideLeft">
                       <div class="sliding-container">
                           <div class="flex-shrink-0 w-64 p-2"><div class="bg-white rounded-xl overflow-hidden shadow-md"><div class="w-full h-32 bg-cover bg-center" style='background-image: url("https://images.unsplash.com/photo-1512621776951-a57141f2eefd?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");'></div><div class="p-4"><p class="font-bold">Vibrant Veggie Bowl</p></div></div></div>
-                          <div class="flex-shrink-0 w-64 p-2"><div class="bg-white rounded-xl overflow-hidden shadow-md"><div class="w-full h-32 bg-cover bg-center" style='background-image: url("https://images.unsplash.com/photo-1484723050470-6b6a3b2b8941?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");'></div><div class="p-4"><p class="font-bold">Avocado Toast</p></div></div></div>
+                          <div class="flex-shrink-0 w-64 p-2"><div class="bg-white rounded-xl overflow-hidden shadow-md"><div class="w-full h-32 bg-cover bg-center" style='background-image: url("https://www.allrecipes.com/thmb/H1mSgOExKFdto3PWLfC9aTgJmlI=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/11699506-avocado-toast-4x3-ea45b882fb0c454a9ca31647d4fd3c01.jpg");'></div><div class="p-4"><p class="font-bold">Avocado Toast</p></div></div></div>
                           <div class="flex-shrink-0 w-64 p-2"><div class="bg-white rounded-xl overflow-hidden shadow-md"><div class="w-full h-32 bg-cover bg-center" style='background-image: url("https://images.unsplash.com/photo-1482049016688-2d3e1b311543?q=80&w=1910&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");'></div><div class="p-4"><p class="font-bold">Gourmet Eggs</p></div></div></div>
                           <div class="flex-shrink-0 w-64 p-2"><div class="bg-white rounded-xl overflow-hidden shadow-md"><div class="w-full h-32 bg-cover bg-center" style='background-image: url("https://images.unsplash.com/photo-1565958011703-44f9829ba187?q=80&w=1965&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");'></div><div class="p-4"><p class="font-bold">Berry Cake</p></div></div></div>
                           <div class="flex-shrink-0 w-64 p-2"><div class="bg-white rounded-xl overflow-hidden shadow-md"><div class="w-full h-32 bg-cover bg-center" style='background-image: url("https://images.unsplash.com/photo-1512621776951-a57141f2eefd?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");'></div><div class="p-4"><p class="font-bold">Vibrant Veggie Bowl</p></div></div></div>
@@ -170,18 +170,18 @@
           <h2 class="text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5">Trending Recipes</h2>
           <div class="space-y-6 px-4">
             <div class="flex flex-col bg-white rounded-xl overflow-hidden shadow-md md:flex-row">
-              <div class="w-full md:w-2/5 bg-center bg-no-repeat aspect-video md:aspect-auto bg-cover" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAoHMGb6kDrReUIb2sJHs4ElbN9ZPA4i6szLSeKTJTS7F-bgSdkSqjKxo6KObc67f_OC76Qf__PIz8igzN-cs1QXXUIWdymcj-SvPRfTsqAGlFxCZE6b7yq7aomYdufEx0iYZXYqLKjyGkKmMxJGy7o8tA3ZboefakLyzcNEC_sAr5vDp32QgvswaMK2EfQUs_kYKHmp1Blt7H2F4VZ3dBmITrU07xxntmI4ez8LBy0bMFVy-xE3jAQJPLFz7qO8iRWVz8uF2C77U4");'></div>
-              <div class="p-4 md:p-6 flex-1">
-                <p class="text-lg font-bold leading-tight mb-2">Lemon Herb Roasted Chicken</p>
-                <p class="text-[#9c6f49] mb-3">A classic dish with a zesty twist, perfect for a weeknight dinner.</p>
-                <p class="text-sm text-[#9c6f49] mb-4"><span class="font-semibold">Ingredients:</span> Chicken, Lemon, Garlic, Rosemary</p>
-                <button class="flex items-center justify-center h-8 px-4 bg-[#f38124] text-[#1c140d] text-sm font-medium rounded-lg hover:bg-[#e07015] transition-colors">
-                  View Recipe
-                </button>
-              </div>
-            </div>
+    <div class="w-full md:w-2/5 bg-center bg-no-repeat aspect-video md:aspect-auto bg-cover" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAoHMGb6kDrReUIb2sJHs4ElbN9ZPA4i6szLSeKTJTS7F-bgSdkSqjKxo6KObc67f_OC76Qf__PIz8igzN-cs1QXXUIWdymcj-SvPRfTsqAGlFxCZE6b7yq7aomYdufEx0iYZXYqLKjyGkKmMxJGy7o8tA3ZboefakLyzcNEC_sAr5vDp32QgvswaMK2EfQUs_kYKHmp1Blt7H2F4VZ3dBmITrU07xxntmI4ez8LBy0bMFVy-xE3jAQJPLFz7qO8iRWVz8uF2C77U4");'></div>
+    <div class="p-4 md:p-6 flex-1">
+        <p class="text-lg font-bold leading-tight mb-2">Lemon Herb Roasted Chicken</p>
+        <p class="text-[#9c6f49] mb-3">A classic dish with a zesty twist, perfect for a weeknight dinner.</p>
+        <p class="text-sm text-[#9c6f49] mb-4"><span class="font-semibold">Ingredients:</span> Chicken, Lemon, Garlic, Rosemary</p>
+        <a href="subrcp.html" class="flex items-center justify-center h-8 px-4 bg-[#f38124] text-[#1c140d] text-sm font-medium rounded-lg hover:bg-[#e07015] transition-colors">
+            View Recipe
+        </a>
+    </div>
+</div>
              <div class="flex flex-col bg-white rounded-xl overflow-hidden shadow-md md:flex-row">
-              <div class="w-full md:w-2/5 bg-center bg-no-repeat aspect-video md:aspect-auto bg-cover" style='background-image: url("https://images.unsplash.com/photo-1598515214211-89d3c7373051?q=80&w=1771&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");'></div>
+              <div class="w-full md:w-2/5 bg-center bg-no-repeat aspect-video md:aspect-auto bg-cover" style='background-image: url("https://thumbs.dreamstime.com/b/spicy-shrimp-tacos-delicious-spicy-shrimp-tacos-shredded-cabbage-queso-fresco-jalapeno-pepper-168814584.jpg");'></div>
               <div class="p-4 md:p-6 flex-1">
                 <p class="text-lg font-bold leading-tight mb-2">Spicy Shrimp Tacos</p>
                 <p class="text-[#9c6f49] mb-3">A fiery and flavorful taco recipe that's sure to be a crowd-pleaser.</p>
