--- a/subblog.html
+++ b/subblog.html
@@ -180,7 +180,7 @@
       <div class="hidden md:flex md:flex-row gap-6 py-4 md:py-0">
         <a class="text-sm md:text-base font-medium leading-normal hover:text-[#f38124] transition-colors" href="Rcp.html">Recipes</a>
         <a class="text-sm md:text-base font-medium leading-normal text-[#f38124] font-bold" href="Blog.html">Blog</a>
-        <a class="text-sm md:text-base font-medium leading-normal hover:text-[#f38124] transition-colors" href="#">Seasonal</a>
+        <a class="text-sm md:text-base font-medium leading-normal hover:text-[#f38124] transition-colors" href="Bookmark.html">Bookmarks</a>
         <a class="text-sm md:text-base font-medium leading-normal hover:text-[#f38124] transition-colors" href="#">Shop</a>
       </div>
       <div class="flex items-center gap-2 ml-auto">
