--- a/subrcp.html
+++ b/subrcp.html
@@ -109,7 +109,7 @@
     <div class="hidden w-full md:flex md:w-auto md:items-center md:gap-8">
       <div class="flex flex-col md:flex-row gap-4 py-4 md:py-0">
         <a class="text-sm md:text-base font-medium leading-normal text-[#f38124] border-b-2 border-[#f38124]" href="#">Recipes</a>
-        <a class="text-sm md:text-base font-medium leading-normal hover:text-[#f38124] transition-colors" href="#">Learn/How-to</a>
+        <a class="text-sm md:text-base font-medium leading-normal hover:text-[#f38124] transition-colors" href="Bookmark.html">Bookmarks</a>
         <a class="text-sm md:text-base font-medium leading-normal hover:text-[#f38124] transition-colors" href="#">Seasonal Sensations</a>
         <a class="text-sm md:text-base font-medium leading-normal hover:text-[#f38124] transition-colors" href="#">Shop</a>
       </div>
