--- a/Contact.html
+++ b/Contact.html
@@ -46,9 +46,9 @@
     <div class="hidden w-full md:flex md:w-auto md:items-center md:gap-8">
       <div class="flex flex-col md:flex-row gap-4 py-4 md:py-0">
         <a class="text-sm md:text-base font-medium leading-normal text-[#9c6f49] hover:text-[#f38124] transition-colors" href="Rcp.html">Recipes</a>
-        <a class="text-sm md:text-base font-medium leading-normal hover:text-[#f38124] transition-colors" href="#">Learn/How-to</a>
+        <a class="text-sm md:text-base font-medium leading-normal hover:text-[#f38124] transition-colors" href="Bookmark.html">Bookmarks</a>
         <a class="text-sm md:text-base font-medium leading-normal hover:text-[#f38124] transition-colors" href="#">Seasonal Sensations</a>
-        <a class="text-sm md:text-base font-medium leading-normal hover:text-[#f38124] transition-colors" href="#">Shop</a>
+        <a class="text-sm md:text-base font-medium leading-normal hover:text-[#f38124] transition-colors" href="Blog.html">Blog</a>
       </div>
       <div class="flex items-center gap-2 md:gap-4">
        <a href="login.html" class="flex items-center justify-center h-10 px-4 bg-[#f38124] text-[#1c140d] text-sm font-bold rounded-xl whitespace-nowrap min-w-[84px] hover:bg-[#e07015] transition-colors">
