--- a/Sample.html
+++ b/Sample.html
@@ -106,16 +106,16 @@
             </div>
           </div>
 
-          <h2 class="text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5 mt-4">Shop by Category</h2>
+          <h2 class="text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5 mt-4">Browse by Category</h2>
           <div class="flex overflow-x-auto scrollbar-hide pb-4">
             <div class="flex items-stretch p-4 gap-4 sm:gap-6 md:gap-8 min-w-max">
               <div class="flex flex-col gap-3 text-center min-w-[100px] sm:min-w-[120px]">
                 <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full w-full" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDJklOS3IeikfFmpVMhvid86Yu2t8OtYh3A82QEUNWrIY8cMwpYvZ3NTwnMjhV89b-ZtMF_d49S7HFk4LDNI6sU_2P577Q2FzjYZvnaeGZFxKeSNJwCAC4RCNIsc-_On27RdYb6Y_8enPKDcLQpoN-D0TXvk9_xuIqTjdLeqgQNU98HA4WNaZB4Q5RtlF1WAj5se6RAHDh9ZkEe0P-42Cg7z79fyVMXQs5VvriDtpnVI-5ux6H3T0k8rJRvB_k3_LXce9EJ5kbqEmU");'></div>
-                <p class="text-base font-medium leading-normal">Vegetables</p>
+                <p class="text-base font-medium leading-normal">Vegan</p>
               </div>
                <div class="flex flex-col gap-3 text-center min-w-[100px] sm:min-w-[120px]">
                 <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full w-full" style='background-image: url("https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?q=80&w=1981&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");'></div>
-                <p class="text-base font-medium leading-normal">Pizza</p>
+                <p class="text-base font-medium leading-normal">Low Calorie</p>
               </div>
               <div class="flex flex-col gap-3 text-center min-w-[100px] sm:min-w-[120px]">
                 <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full w-full" style='background-image: url("https://images.unsplash.com/photo-1540189549336-e6e99c3679fe?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");'></div>
