--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Loading Culinary Canvas...</title>
-    <meta http-equiv="refresh" content="1; url=Sample.html">
+    <meta http-equiv="refresh" content="5"; url=Sample.html">
     
     <script type="text/javascript">
         window.location.href = "Sample.html"; 
