--- a/Rcp.html
+++ b/Rcp.html
@@ -120,7 +120,7 @@
       <section class="mb-12">
         <div class="flex justify-between items-center mb-6">
           <h2 class="text-xl md:text-2xl font-bold text-[#1c140d] category-header">Classic Indian</h2>
-          <a href="#" class="text-sm text-[#f38124] font-medium hover:underline">View All</a>
+          <a href="view-all-recipes.html" class="text-sm text-[#f38124] font-medium hover:underline">View All</a>
         </div>
         
         <div class="relative scroll-container">
