--- a/About.html
+++ b/About.html
@@ -80,14 +80,14 @@
 <body class="bg-[#fcfaf8]" style='font-family: "Plus Jakarta Sans", "Noto Sans", sans-serif;'>
   <!-- Header -->
   <header class="flex items-center justify-between whitespace-nowrap border-b border-solid border-b-[#f4ede7] px-4 py-3 md:px-10">
-    <div class="flex items-center gap-4 text-[#1c140d]">
+    <a class="flex items-center gap-4 text-[#1c140d]">
       <div class="size-4">
         <svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M4 4H17.3334V17.3334H30.6666V30.6666H44V44H4V4Z" fill="currentColor"></path>
         </svg>
       </div>
       <h2 class="text-[#1c140d] text-lg font-bold leading-tight tracking-[-0.015em]">Culinary Canvas</h2>
-    </div>
+    </a>
     <div class="flex flex-1 justify-end gap-8">
       <div class="hidden md:flex items-center gap-9">
         <a class="text-[#1c140d] text-sm font-medium leading-normal hover:text-[#f38124] transition-colors" href="Rcp.html">Recipes</a>
