--- a/Blog.html
+++ b/Blog.html
@@ -276,14 +276,14 @@
     <div class="layout-container flex h-full grow flex-col">
       <!-- Header -->
       <header class="flex flex-wrap items-center justify-between px-4 py-3 border-b border-solid border-b-[#f4ede7] sm:px-6 md:px-10 sticky top-0 bg-white z-50 shadow-sm">
-        <div class="flex items-center gap-4 text-[#1c140d]">
-          <div class="size-4">
-            <svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M4 4H17.3334V17.3334H30.6666V30.6666H44V44H4V4Z" fill="currentColor"></path>
-            </svg>
-          </div>
-          <h2 class="text-lg font-bold leading-tight tracking-[-0.015em]">Culinary Canvas</h2>
-        </div>
+      <a class="flex items-center gap-4 text-[#1c140d]" href="Sample.html">
+      <div class="size-4">
+        <svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M4 4H17.3334V17.3334H30.6666V30.6666H44V44H4V4Z" fill="currentColor"></path>
+        </svg>
+      </div>
+      <h2 class="text-lg font-bold leading-tight tracking-[-0.015em]" >Culinary Canvas</h2>
+    </a>
         
         <div class="flex w-full md:w-auto md:items-center md:gap-8">
           <div class="hidden md:flex md:flex-row gap-6 py-4 md:py-0">
