--- a/Contact.html
+++ b/Contact.html
@@ -28,14 +28,14 @@
 </head>
 <body class="bg-[#fcfaf8]" style='font-family: "Plus Jakarta Sans", "Noto Sans", sans-serif;'>
   <header class="flex flex-wrap items-center justify-between px-4 py-3 border-b border-solid border-b-[#f4ede7] sm:px-6 md:px-10">
-    <div class="flex items-center gap-4 text-[#1c140d]">
+    <a class="flex items-center gap-4 text-[#1c140d]" href="Sample.html">
       <div class="size-4">
         <svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M4 4H17.3334V17.3334H30.6666V30.6666H44V44H4V4Z" fill="currentColor"></path>
         </svg>
       </div>
       <h2 class="text-lg font-bold leading-tight tracking-[-0.015em]" >Culinary Canvas</h2>
-    </div>
+    </a>
 
     <button class="md:hidden text-[#1c140d] p-2">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
