--- a/Contact.html
+++ b/Contact.html
@@ -149,8 +149,8 @@
         <div class="flex flex-col sm:flex-row flex-wrap items-center justify-center gap-4 sm:gap-8">
           <a class="text-[#9c6f49] text-base font-normal hover:text-[#f38124] transition-colors" href="About.html">About Us</a>
           <a class="text-[#9c6f49] text-base font-normal hover:text-[#f38124] transition-colors" href="Contact.html">Contact</a>
-          <a class="text-[#9c6f49] text-base font-normal hover:text-[#f38124] transition-colors" href="#">Privacy Policy</a>
-          <a class="text-[#9c6f49] text-base font-normal hover:text-[#f38124] transition-colors" href="#">Terms of Service</a>
+          <a class="text-[#9c6f49] text-base font-normal hover:text-[#f38124] transition-colors" href="privacy.html">Privacy Policy</a>
+          <a class="text-[#9c6f49] text-base font-normal hover:text-[#f38124] transition-colors" href="terms.html">Terms of Service</a>
         </div>
         <div class="flex justify-center gap-6">
           <a href="#" class="text-[#9c6f49] hover:text-[#f38124] transition-colors">
